<resources>
    <string name="app_name">Women Safety</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_suburb_details">Suburb Details</string>
    <string name="title_activity_Wikipedia_country_details">Wikipedia Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="find_password">Find Password</string>
    <string name="logout">Log out</string>
    <string name="edit">Edit</string>
    <string name="account">Account</string>
    <string name="please_login">Please login</string>
    <string name="enter_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email">Send Email</string>
    <string name="new_password">Enter your new password</string>
    <string name="password_again">Enter your password again</string>
    <string name="save">Save</string>
    <string name="edit_photo">Edit profile photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="choose_photo">Choose image</string>
    <string name="upload">upload</string>
    <string name="contact_list">Contact list</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="delete">Delete</string>
    <string name="sms_text">SMS Text</string>
    <string name="edit_help">Edit SMS Text</string>
    <string name="setting">Setting</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Edit Password</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="profile">Profile</string>
    <string name="call_permission">Call Permission:</string>
    <string name="sms_permission">SMS Permission:</string>
    <string name="permission">Permission</string>
    <string name="other">Other</string>
    <string name="allow">Allow</string>
    <string name="denied">Denied</string>
    <string name="verify">Verify</string>
    <string name="old_pass">Old Password</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="help_and_support">Help and Support</string>
    <string name="melbourne_crime_data">Melbourne Crime Data</string>
    <string name="women">Women</string>
    <string name="safety">Safety</string>
    <string name="welcome">Welcome</string>
</resources>
