<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_user"
        android:title="@string/account" />
    <item
        android:id="@+id/contactList"
        android:icon="@drawable/ic_phonecall"
        android:title="@string/contact_list" />
    <item
        android:id="@+id/MelCrimeData"
        android:icon="@drawable/ic_chart"
        android:title="@string/melbourne_crime_data" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />
    <item
        android:id="@+id/loginOrOut"
        android:icon="@drawable/ic_login"
        android:title="@string/login" />
</menu>